...
                    android:paddingRight="4dp"
                    android:text="@string/number_of_stops"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/num_stops"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/end_address"
                    android:layout_toEndOf="@+id/num_stops_label"
...
